[feat] 增加B04-4 移動列表位置，修改swagger文件
